# NYANUtil

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
samples/: CMakeLists.txt  CoroUsage.cpp  Usage.cpp
src/: CMakeLists.txt
src/Assert/: Assert.cppm  CMakeLists.txt  NYANAssert.cppm
src/Coro/: CMakeLists.txt  NYANCoro.ixx
src/Data/: CMakeLists.txt  Common.cppm  Common.ixx  CommonConcepts.ixx  DynamicArray.cppm  DynamicArray.ixx  DynamicBitset.cppm  DynamicBitset.ixx  Handle.cppm  Hash.cppm  Hash.ixx  Id.cppm  ModuleSettings.cppm  NYANData.cppm  NYANData.ixx  NotNull.cppm  Pointer.cppm  StaticBitset.cppm  StaticBitset.ixx  StaticVector.cppm  StaticVector.ixx
src/Log/: CMakeLists.txt  NYANLog.cppm  NYANLog.ixx
src/Math/: CMakeLists.txt  Constants.ixx  Half.ixx  Matrix.ixx  NYANMath.ixx  Quaternion.ixx  Util.ixx  Vector.ixx
tests/: CMakeLists.txt
tests/Assert/: AssertTests.cpp  CMakeLists.txt
tests/Coro/: CMakeLists.txt  CoroTests.cpp
tests/Data/: CMakeLists.txt  DataTests.cpp  DynamicArrayTests.cpp  DynamicBitsetTests.cpp  HashTests.cpp  NotNullTests.cpp  StaticBitsetTests.cpp  StaticVectorTests.cpp
tests/Log/: CMakeLists.txt  LogTests.cpp
tests/Math/: CMakeLists.txt  MatrixTests.cpp  VectorTests.cpp
