# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------

add_subdirectory(thirdparty)

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------


add_subdirectory(Data)
add_subdirectory(Log)
add_subdirectory(Math)

